--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -147,8 +147,8 @@ nav ul .nav-item #Submenu li:hover > a{
 }
 
 .offcanvas .offcanvas-header img {
-    width: 100px;
-    height: 45px;
+    width: 120px;
+    height: 55px;
 }
 
 
@@ -236,7 +236,7 @@ nav ul .nav-item #Submenu li:hover > a{
     position: absolute;
     width: 25px;
     height: 25px;
-    left: 90%;
+    left: 94%;
     background-color: var(--primary-Color);
     border-radius: 50%;
     color: var(--third-Color);
@@ -647,6 +647,10 @@ nav ul .nav-item #Submenu li:hover > a{
 }
 
 /* *Arrows css  */
+
+#product-arrows{
+    position: relative;
+}
 
 .arrows .leftArrow,
 .rightArrow{
