--- a/asset/css/common.css
+++ b/asset/css/common.css
@@ -954,16 +954,26 @@ a{
 /* *header left ends* */
 /* *header Right* */
 
+
 #Header .header_right .top_headerCnt h6{
-    border-right: 3px solid #fdfdfd;
     color: var(--third-Color);
     font-family: var(--secendery-Font);
     font-size: 16px;
     font-weight: 400;
     line-height: 28px; /* 175% */
-    text-align: center;
+    text-align: left;
     margin-top: 10px;
+    position: relative;
     
+}
+
+#Header .header_right .top_headerCnt h6::before {
+    content: "";
+    border-left: 3px solid var(--third-Color);
+    height: 24px;
+    position: absolute;
+    top: 3px;
+    right: 0px;
 }
 
 #Header .header_right .top_headerCnt-2 .header_socialIcon a{
@@ -1006,20 +1016,25 @@ a{
 }
 
 #BannerContent h1 {
+    position: relative;
     color: var(--third-Color);
     font-family: var(--primary-Font);
     font-size: 48px;
     font-weight: 700;
     line-height: 58px; /* 120.833% */
     padding-top: 150px;
+    z-index: 99;
 }
 
+
 #BannerContent p{
+    position: relative;
     color: var(--third-Color);
     font-family: var(--secendery-Font);
     font-size: 16px;
     font-weight: 400;
     line-height: 28px; /* 175% */
+    z-index: 99;
 }
 /* bannerContent section Ends */
 
