--- a/asset/css/responsive.css
+++ b/asset/css/responsive.css
@@ -2727,7 +2727,7 @@ ol, ul {
 #Shop-product-card .product-card {
    margin-top: 10px;
    height: 660px;
-   border: 2px solid #BDBDBD;
+   box-shadow: rgba(67, 71, 85, 0.27) 0px 0px 0.25em, rgba(90, 125, 188, 0.05) 0px 0.25em 1em;
    border-radius: 4px;
    padding: 10px;
 }
@@ -3602,8 +3602,7 @@ ol, ul {
 #Shop-product-card .product-card {
    margin-top: 10px;
    height: 680px;
-   border: 2px solid #BDBDBD;
-   padding: 20px;
+   box-shadow: rgba(67, 71, 85, 0.27) 0px 0px 0.25em, rgba(90, 125, 188, 0.05) 0px 0.25em 1em;   padding: 20px;
    border-radius: 4px;
 }
 
@@ -4538,8 +4537,7 @@ font-size: 10px;
 
 #Shop-product-card .product-card {
    height: 370px;
-   border: 2px solid #BDBDBD;
-   padding: 10px;
+   box-shadow: rgba(67, 71, 85, 0.27) 0px 0px 0.25em, rgba(90, 125, 188, 0.05) 0px 0.25em 1em;   padding: 10px;
 }
 
 #Shop-product-card .product-card .product-imgs {
@@ -5081,10 +5079,7 @@ font-size: 14px;
    text-align: left;
 }
 
-/* #Header .header_right .top_headerCnt:nth-child(3) h6 {
-   margin-right: -10px;
-   text-align: left;
-} */
+
 
 #Header .header_right .top_headerCnt-2 {
    margin-left: -24px;
